  imported from new sub-module ldap.pkginfo also to setup.py
* Added safety assertion when importing _ldap:
  ldap.pkginfo.__version__ must match _ldap.__version__
* removed stand-alone module dsml
* slapdtest.SlapdObject.restart() just restarts slapd
  without cleaning any data
* Compability changes for pyasn1 0.3.x or newer
  (thanks to Ilya Etingof and Christian Heimes)

Tests/
* added explicit reconnect tests for ReconnectLDAPObject

----------------------------------------------------------------
Released 2.4.45 2017-10-09

Changes since 2.4.44:

Lib/
* Fixed reraising of wrong exception in SimpleLDAPObject._ldap_call()
  (thanks to Aigars Grins)

Tests/
* removed work-around in t_cext.py

----------------------------------------------------------------
Released 2.4.44 2017-09-08

Changes since 2.4.43:

Modules/
* more fine-grained GIL releasing in function l_ldap_result4()

----------------------------------------------------------------
Released 2.4.43 2017-09-06

Changes since 2.4.42:

Lib/
* fixed passing all arguments from LDAPObject.sasl_non_interactive_bind_s()
  to LDAPObject.sasl_interactive_bind_s()

Tests/
* added test for LDAPObject.sasl_external_bind_s()

Doc/
* added docs for SASL bind methods
* more references
* better sorting of LDAPObject methods

----------------------------------------------------------------
Released 2.4.42 2017-09-04

Changes since 2.4.41:

Lib/
* added new SlapdObject methods _ln_schema_files() and
  _create_sub_dirs()
* SlapdObject methods setup_rundir() and gen_config()
  are now "public" methods
* removed pseudo test script from module ldap.cidict

Tests/
* added sub-module for testing class ldap.cidict.cidict
* avoid deprecated method alias unittest.TestCase.assertEquals

----------------------------------------------------------------
Released 2.4.41 2017-07-12

Changes since 2.4.40:

Lib/
* Added support for increment: lines in LDIF changes records

----------------------------------------------------------------