@@ -119,14 +119,17 @@ class SSSResponseControl(ResponseControl):
     def decodeControlValue(self, encoded):
         p, rest = decoder.decode(encoded, asn1Spec=SortResultType())
         assert not rest, 'all data could not be decoded'
-        self.result = int(p.getComponentByName('sortResult'))
-        self.result_code = p.getComponentByName('sortResult').prettyOut(self.result)
-        attribute_type_error = p.getComponentByName('attributeType')
-        if attribute_type_error.hasValue():
-            self.attribute_type_error = attribute_type_error
+        sort_result = p.getComponentByName('sortResult')
+        self.sortResult = int(sort_result)
+        attribute_type = p.getComponentByName('attributeType')
+        if attribute_type.hasValue():
+            self.attributeType = attribute_type
         else:
-            self.attribute_type_error = None
+            self.attributeType = None
+        # backward compability class attributes
+        self.result = self.sortResult
+        self.attribute_type_error = self.attributeType
+        # not sure whether to keep this
+        self.result_code = sort_result.prettyPrint()
 
-
-KNOWN_RESPONSE_CONTROLS[SSSRequestControl.controlType] = SSSRequestControl
 KNOWN_RESPONSE_CONTROLS[SSSResponseControl.controlType] = SSSResponseControl
